Agregado endpoint de administador
